--- a/index.css
+++ b/index.css
@@ -1,22 +1,34 @@
 body {
   font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  background-color: #f0f2f5;
 }
 
 .top-section {
   display: flex;
   justify-content: center;
   flex-direction: row;
-  background-color: rgb(241, 241, 241);
   padding-top: 8%;
   padding-bottom: 17%;
 }
 
 img {
+  height: 120px;
+  margin: -35px;
+}
+
+h2 {
+  font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 40px;
+  width: 530px;
 }
 
 .left-content {
   display: flex;
   flex-direction: row;
+  margin-top: 85px;
+  margin-right: 60px;
 }
 
 .login-form {
@@ -25,37 +37,58 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 5px;
+  padding: 7px;
   background-color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
+  margin-left: 60px;
 }
 
 input {
-  width: 380px;
-  height: 50px;
+  font-size: larger;
+  width: 400px;
+  height: 55px;
   margin: 10px;
+  padding-left: 16px;
   border-radius: 6px;
   border: 1px solid rgba(211, 211, 211, 0.959);
 }
 
+input:focus {
+  outline: 1px solid #1877f2;
+  box-shadow: #458cfd;
+  caret-color: #2478ff;
+}
+
+::placeholder {
+  font-size: large;
+  color: rgb(157, 157, 157);
+}
+
 #btn-1 {
-  background-color: #0866ff;
+  background-color: #2478ff;
   color: white;
-  width: 380px;
+  width: 400px;
   height: 50px;
   margin: 10px;
   border-radius: 6px;
   border-width: 0px;
-  font-size: larger;
+  font-size: x-large;
   font-weight: bold;
+  cursor: pointer;
 }
 
 a {
+  text-decoration: none;
   text-align: center;
   color: #0866ff;
   font-size: 17px;
   font-weight: 500;
   margin: 10px;
+  cursor: pointer;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 #btn-2 {
@@ -68,6 +101,9 @@ a {
   border-width: 0px;
   font-size: larger;
   font-weight: bold;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  cursor: pointer;
 }
 
 hr {
@@ -76,15 +112,23 @@ hr {
 }
 
 .create-page {
-  margin-top: 25px;
+  font-weight: normal;
+  margin-top: 28px;
+  margin-left: 80px;
 }
 
 #a1 {
+  padding-left: 4px;
   color: black;
   font-weight: bold;
+  font-size: 16px;
   text-decoration: none;
 }
 
-.bottom-section {
-  background-color: white;
+#a1:hover {
+  text-decoration: underline;
+}
+
+footer {
+  background-color: #fff;
 }
