--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ img {
   margin: -35px;
 }
 h2 {
-  font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 30px;
   font-weight: normal;
   line-height: 35px;
